--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    background-color: #BBACC1;
+    color: #1F2041;
 }
 
 h1 {
@@ -19,18 +21,21 @@ h1 {
     text-align: center;
 }
 
+.btn {
+    background-color: #6441a4;
+    color: #fff;
+}
+
 ul {
-    margin-top: 40px;
+    border: 2px solid #000;
+    border-radius: 14px;
+    margin-top: 10px;
     padding: 5px;
     list-style-type: none;
 }
 
 li {
-    border: 1px solid #000;
-    border-radius: 6px;
     padding: 8px;
-    margin: 6px;
-    background-color: #fcf8e3;
     font-size: 15px;
 }
 
