--- a/style.css
+++ b/style.css
@@ -17,16 +17,13 @@ h1 {
     font-size: 50px;
 }
 
-#mainDiv {
-    text-align: center;
-}
-
 .btn {
     font-size: 16px;
     background-color: #6441a4;
     color: #fff;
-    width: 24%;
+    min-width: 24%;
     border: 1px solid #1F2041;
+    border-radius: 0px;
     transition: background 1s, color 1s;
 }
 
